MOBL-2520: adding documentation & login logic changes
